# LazyBot-RAG

./: .gitignore  README.md  pyproject.toml
agent/: __init__.py
agent/tools/: __init__.py
