[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-agent"
version = "0.1.0"
description = "Local-first AI agent with tools, RAG, and vision"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.14.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.1.0",
    "tiktoken>=0.7.0",
    "Pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.1.0",
    "trafilatura>=1.9.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.111.0", "uvicorn>=0.29.0"]
test = ["pytest>=8.1.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
